--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 Django==1.7.3
+Markdown==2.5.2
 MySQL-python==1.2.5
 Pillow==2.7.0
+django-filter==0.9.2
+djangorestframework==3.0.4
 mysql-connector-python==2.0.2
 mysqlclient==1.3.4
 wsgiref==0.1.2
