--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
 Django==1.7.3
-Markdown==2.5.2
-MySQL-python==1.2.5
-Pillow==2.7.0
-Pygments==2.0.2
 django-filter==0.9.2
 djangorestframework==3.0.4
-httpie==0.9.1
+flup==1.0.2
+Markdown==2.5.2
 mysql-connector-python==2.0.2
+MySQL-python==1.2.5
 mysqlclient==1.3.4
-requests==2.5.1
-wsgiref==0.1.2
+Pillow==2.7.0
+virtualenv==12.0.7
