--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,5 @@ local_urls.py
 local_settings.py
 static/admin
 static/rest_framework
-media/tag_logos/*.png
-media/tag_logos/*.jpg
+media/tag_logos
+media/activity_images
