--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,22 @@
+alembic==0.7.2
 Django==1.7.3
-django-filter==0.9.2
-djangorestframework==3.0.4
-flup==1.0.2
-Markdown==2.5.2
+Flask-SQLAlchemy==2.0
+GDAL==1.11.1
+httpie==0.9.2
+itsdangerous==0.24
+jdcal==1.0
+Jinja2==2.7.3
+Mako==1.0.0
+MarkupSafe==0.23
 mysql-connector-python==2.0.2
-MySQL-python==1.2.5
-mysqlclient==1.3.4
-Pillow==2.7.0
-virtualenv==12.0.7
+numpy==1.8.1
+openpyxl==1.8.6
+pandas==0.14.0
+psycopg2==2.5.3
+Pygments==2.0.2
+python-dateutil==2.2
+pytz==2014.4
+requests==2.5.3
+six==1.7.3
+virtualenv==1.11.6
+Werkzeug==0.9.6
