--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,13 @@
-alembic==0.7.2
 Django==1.7.3
-Flask-SQLAlchemy==2.0
-GDAL==1.11.1
-httpie==0.9.2
-itsdangerous==0.24
-jdcal==1.0
-Jinja2==2.7.3
-Mako==1.0.0
-MarkupSafe==0.23
-mysql-connector-python==2.0.2
-numpy==1.8.1
-openpyxl==1.8.6
-pandas==0.14.0
-psycopg2==2.5.3
+Markdown==2.5.2
+MySQL-python==1.2.5
+Pillow==2.7.0
 Pygments==2.0.2
-python-dateutil==2.2
-pytz==2014.4
-requests==2.5.3
-six==1.7.3
-virtualenv==1.11.6
-Werkzeug==0.9.6
+django-filter==0.9.2
+djangorestframework==3.0.4
+httpie==0.9.1
+mysql-connector-python==2.0.2
+mysqlclient==1.3.4
+requests==2.5.1
+virtualenv==12.0.7
+wsgiref==0.1.2
