--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Pygments==2.0.2
 django-filter==0.9.2
 djangorestframework==3.0.4
 httpie==0.9.1
+mock==1.0.1
 mysql-connector-python==2.0.2
 mysqlclient==1.3.4
 requests==2.5.1
